# snpe_android_demo

./: README.md  local.properties  pull_remote.sh
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/1280x800/: 005.jpg.yuv  010.jpg.yuv  012.jpg.yuv  015.jpg.yuv  017.jpg.yuv  022.jpg.yuv  023.jpg.yuv  027.jpg.yuv  030.jpg.yuv  035.jpg.yuv  036.jpg.yuv  049.jpg.yuv  050.jpg.yuv  054.jpg.yuv  058.jpg.yuv  062.jpg.yuv  065.jpg.yuv  067.jpg.yuv  070.jpg.yuv  071.jpg.yuv  073.jpg.yuv  077.jpg.yuv  080.jpg.yuv  082.jpg.yuv  083.jpg.yuv  084.jpg.yuv  085.jpg.yuv  087.jpg.yuv  088.jpg.yuv  093.jpg.yuv  094.jpg.yuv  096.jpg.yuv  099.jpg.yuv  100.jpg.yuv  101.jpg.yuv
app/src/main/cpp/: CMakeLists.txt  android_log.h  hello-libs.cpp  jni_load.cpp  resize_image.cpp  resize_image.h  snpe_env.cpp  snpe_env.h
app/src/main/java/com/example/hellolibs/: AssetCopyer.java  MainActivity.java
distribution/snpe/include/: SnpeLoader.h
gen-libs/: build.gradle
gen-libs/src/main/cpp/: CMakeLists.txt
